[gd_scene load_steps=9 format=2]

[ext_resource path="res://Coin.gd" type="Script" id=1]
[ext_resource path="res://sounds/coin.wav" type="AudioStream" id=2]
[ext_resource path="res://sprites/coin1.png" type="Texture" id=3]
[ext_resource path="res://sprites/coin2.png" type="Texture" id=4]
[ext_resource path="res://sprites/coin3.png" type="Texture" id=5]
[ext_resource path="res://sprites/coin4.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.20631
height = 0.965015

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "blink",
"speed": 8.0
} ]

[node name="Coin" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.119509, -0.189742 )
shape = SubResource( 1 )

[node name="CatchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -12.019

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "blink"
frame = 3
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="finished" from="CatchSound" to="." method="_on_CatchSound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
